src/test/resources/validation/error/unknownArgumentReferenceKey/schema.graphqls
type Dummy {
  id(id: ID @reference(references: {key: "UNKNOWN_KEY"})): ID
}
